--- a/week_02/never_say_no_to_panda.ipynb
+++ b/week_02/never_say_no_to_panda.ipynb
@@ -36,14 +36,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "worse-converter",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "substantial-softball",
    "metadata": {},
@@ -57,7 +49,73 @@
    "id": "fixed-gilbert",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import opendatasets as od"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f723ab58",
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please provide your Kaggle credentials to download this dataset. Learn more: http://bit.ly/kaggle-creds\n",
+      "Your Kaggle username: soniafernandezc\n",
+      "Your Kaggle Key: ········\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 38.7k/38.7k [00:00<00:00, 1.75MB/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading binancecoin-data.zip to ./binancecoin-data\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "od.download(\"https://www.kaggle.com/varpit94/binancecoin-data\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "faf6a41a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading binancecoin-data.zip to /mnt/c/Users/Usuario/lb_ironhack/classroom-materials/week_02\n",
+      "  0%|                                               | 0.00/38.7k [00:00<?, ?B/s]\n",
+      "100%|███████████████████████████████████████| 38.7k/38.7k [00:00<00:00, 412kB/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "!kaggle datasets download -d varpit94/binancecoin-data"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -238,9 +296,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ironhack",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "ironhack"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -252,7 +310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   },
   "toc": {
    "base_numbering": 1,
